--- a/index.html
+++ b/index.html
@@ -13,33 +13,10 @@
     <![endif]-->
   </head>
   <body>
-    <div class="wrapper">
-      <header>
-        <h1>Calling in Sick</h1>
-        <p></p>
-
-        <p class="view"><a href="https://github.com/mrmitchboyer/callinginsick">View the Project on GitHub <small>mrmitchboyer/callinginsick</small></a></p>
-
-
-        <ul>
-          <li><a href="https://github.com/mrmitchboyer/callinginsick/zipball/master">Download <strong>ZIP File</strong></a></li>
-          <li><a href="https://github.com/mrmitchboyer/callinginsick/tarball/master">Download <strong>TAR Ball</strong></a></li>
-          <li><a href="https://github.com/mrmitchboyer/callinginsick">View On <strong>GitHub</strong></a></li>
-        </ul>
-      </header>
-      <section>
-        <h3>
-<a id="calling-in-sick" class="anchor" href="#calling-in-sick" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Calling in Sick</h3>
-
-<p>coming soon
-<a href="mailto:mitch@callinginsick.net">mitch@callinginsick.net</a></p>
-      </section>
-      <footer>
-        <p>This project is maintained by <a href="https://github.com/mrmitchboyer">mrmitchboyer</a></p>
-        <p><small>Hosted on GitHub Pages &mdash; Theme by <a href="https://github.com/orderedlist">orderedlist</a></small></p>
-      </footer>
+    <div>
+      <h3>Calling in Sick</h3>
+      <p>coming soon
+      <a href="mailto:mitch@callinginsick.net">mitch@callinginsick.net</a></p>
     </div>
-    <script src="javascripts/scale.fix.js"></script>
-    
   </body>
 </html>
